# klisk

./: .gitignore  PLAN.md  README.md  agentkit-guide.skill  agentkit-vision.md  klisk-vision.md  pyproject.toml
.claude/: CLAUDE.md
agentkit-guide/: SKILL.md
agentkit-guide/references/: api_reference.md  deploy.md  litellm.md  production.md
docs/: deploy-guide.md  distribution.md  serve-interfaces.md
klisk-guide/: SKILL.md
klisk-guide/references/: api_reference.md  builtin_tools.md  deploy.md  litellm.md  production.md
src/agentkit/: __init__.py
src/agentkit/chat_dist/: index.html  widget.js
src/agentkit/cli/: __init__.py  check.py  create.py  delete.py  deploy.py  dev.py  list_projects.py  run.py  serve.py
src/agentkit/core/: builtin_tools.py  config.py  discovery.py  paths.py  primitives.py  registry.py
src/agentkit/server/: app.py  chat.py  file_editor.py  production.py
src/agentkit/studio_dist/: index.html
src/agentkit/studio_dist/assets/: index-3ncVBTNU.js  index-BsDMjpdK.js  index-BsZEaZ7d.js  index-C1EfaCvi.js  index-C6Tit6vz.js  index-CVN6Gu_m.js  index-CXcdxYgD.css  index-ChAgn3rN.js  index-Ciq3JTEL.js  index-CjreTnT1.css  index-D-QdJBgd.js  index-Dcx923iU.css  index-Dda2Npaz.js  index-DiI-86TR.js  index-Ds7zyy2f.css  index-DyBmnQTT.css  index-LZNdHqT_.js  index-Sri6u8kK.css  index-mEbvRcKy.js  index-yEzG0Vpp.css
src/agentkit/templates/default/: agentkit.config.yaml
src/klisk/: __init__.py
src/klisk/assistant/: __init__.py  prompt.py  run.py
src/klisk/chat_dist/: index.html  widget.js
src/klisk/cli/: __init__.py  _dev_worker.py  _start_worker.py  assistant.py  check.py  config.py  create.py  delete.py  deploy.py  dev.py  docker.py  list_projects.py  run.py  serve.py  start.py  status.py  studio.py  ui.py
src/klisk/core/: builtin_tools.py  cloud_status.py  config.py  daemon.py  discovery.py  env.py  local_server.py  paths.py  primitives.py  registry.py  skill_installer.py
src/klisk/server/: app.py  assistant_chat.py  chat.py  file_editor.py  production.py  watcher.py
src/klisk/studio_dist/: index.html  manifest.webmanifest  sw.js
src/klisk/studio_dist/assets/: index-2NLf82CL.css  index-4PT_Abh4.css  index-57FWMt2o.js  index-594So0eb.js  index-5eYHt1wx.js  index-7-VP9zq6.css  index-7qE5ce5o.js  index-9_CFZnB6.js  index-B1G3V-Rq.css  index-B2RHKXqK.js  index-B5u18DEJ.js  index-B6wR7LZ8.js  index-B90MdP_5.js  index-BCLsc0Vo.css  index-BEHVK6Wb.css  index-BIspsMIv.js  index-BJ5TGH5J.js  index-BKwkncJU.js  index-BM87FoiS.js  index-BPl6SGRw.js  (+119 more)
studio/: index.html  package-lock.json  package.json  vite.config.ts
studio/src/: App.tsx  index.css  main.tsx  types.ts
studio/src/components/: AgentCanvas.tsx  AgentListing.tsx  AgentModal.tsx  AgentNode.tsx  AssistantPanel.tsx  Chat.tsx  DeployPage.tsx  DeploySettings.tsx  EnvModal.tsx  EnvPage.tsx  OfflineScreen.tsx  SecurityPage.tsx  SettingsPage.tsx  Sidebar.tsx  ToolModal.tsx  ToolNode.tsx
studio/src/utils/: builtinTools.tsx
templates/default/: .env.example  klisk.config.yaml
templates/default/agents/: main.py
tests/: test_cli_integration.py  test_config.py  test_discovery.py  test_primitives.py  test_registry.py  test_server.py
(+7 files in other folders)
