[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klisk"
version = "0.2.2"
description = "A framework for building AI agents programmatically"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Juan Echeverria", email = "juan@productomania.io" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai-agents[litellm]>=0.1,<1.0",
    "typer>=0.9,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "websockets>=12.0,<17.0",
    "watchfiles>=0.21,<2.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
assistant = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
klisk = "klisk.cli:app"

[project.urls]
Homepage = "https://klisk.productomania.io"
Repository = "https://github.com/jechearte/klisk"

[tool.hatch.build.targets.wheel]
packages = ["src/klisk"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
